--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -690,13 +690,19 @@ button{
   vertical-align: middle;
 }
 
-.out-of-program-btn{
+.out-of-program-btn {
     right: 8px;
     position: absolute;
     font-size: 12px;
     padding: 0.3rem;
     top: 11rem;
 }
+
+.out-of-program-btn-manager{
+    margin-left: 3rem;
+    font-size: 12px;
+    padding: 0.3rem;
+} 
 
 
 
