accents removed from adress when calling google for latitude and longitude (this solves compatibility with IE11 (TESTED: win 7,8,10)

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,13 +22,13 @@
         <meta property="og:description" content="Orfheo es la primera comunidad artístico-cultural donde conocer proyectos, encontrarse y crear juntos experiencias inolvidables."/>
 
         <!-- favicon -->
-        <link rel='shortcut icon' href="<%= image_path 'orfheoiconocolor.png' %>" type='image/png'/ >
+        <link rel='shortcut icon' href="<%= image_path 'orfheoiconocolor.png' %>" type='image/png'/>
 
         <!-- google icon -->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         
         <!-- google maps -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCimmihWSDJV09dkGVYeD60faKAebhYJXg&libraries=places"
         async defer></script>
 
