--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -745,7 +745,15 @@ button{
   }
 }
 
-
+.goUpBtn-program-event-page{
+  bottom: 0.5rem;
+  font-size: 1.5rem;
+  /* @include horizontal-center; */
+  position: absolute;
+  right: 15%;
+  z-index: 999;
+  color: rgba(0,0,0,0.5);
+}
 
 /*===============================================
 COMPONENTS
