show-hide goUpBtn changed for a class / suggestion after 2 caracters

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2300,3 +2300,7 @@ a.participant-program-card-own {
 .short-description-program-card{
   margin-left: 1.5rem;
 }
+
+.hide-goUpBtn{
+  display: none !important;
+}
