new reorderBySpace function

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2287,7 +2287,7 @@ a.participant-program-card-own {
 
 .blocks-container-prograByspace{
 @include breakpoint(large){
-  margin-bottom: -1rem;}
+  margin-top: -1rem;}
 }
 
 .chooseOrderSelect-additional-distance{
