--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -755,6 +755,15 @@ button{
   color: rgba(0,0,0,0.5);
 }
 
+
+
+
+.OK-btn-reorderSpace-popup{
+  font-size: $almostNormalSize;
+  position: absolute;
+  right: 0;
+}
+
 /*===============================================
 COMPONENTS
 ================================================*/
