order spaces tool improved + design

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -689,20 +689,14 @@ button{
   padding: 0px 8px;
   vertical-align: middle;
 }
-
+/* 
 .out-of-program-btn {
     right: 8px;
     position: absolute;
     font-size: 12px;
     padding: 0.3rem;
     top: 11rem;
-}
-
-.out-of-program-btn-manager{
-    margin-left: 3rem;
-    font-size: 12px;
-    padding: 0.3rem;
-} 
+} */
 
 
 
