--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1618,8 +1618,8 @@ li.artists-selector-container-call-manager{
 .submit-program-btn-container{
   font-size: 0.875rem;
   position: absolute;
-  right: 0px;
-  top: -3rem;
+  right: 1rem;
+  /* top: -3rem; */
   height: 2.5rem;
 }
 
@@ -1905,6 +1905,60 @@ tr.permanent-row-program-table-call-manager td{
   /* word-break: break-all; */
 }
 
+
+.order-buttons-container{
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  height: 2rem;
+  button {
+    font-size: $almostNormalSize;
+    margin-right: 2rem;
+    padding: 0.2rem 0;
+    width: 6rem;
+    float: right;
+  }
+  span {
+    float: right;
+    margin-right: 2rem;
+  }
+}
+
+.tools-buttons-container{
+  position: absolute;
+  display: inline-block;
+  right: 11rem;
+  margin-top: 0.4rem;
+  span{
+    font-size: $almostNormalSize;
+    margin-right: 0.5rem;
+  }
+  .dropdown{
+    display: inline-block;
+    vertical-align: middle;
+  }
+  a {
+    color:  white;
+    background: black;
+    padding: 3px 0.5rem !important; 
+  }
+  span.material-icons{
+    font-size: 1.3rem;
+    margin: 0;
+    @include border-radius($element-border-radius);
+  }
+  li.is-dropdown-submenu-item{
+    text-align: right;
+    padding: 0.15rem 0.4rem;
+    cursor: pointer;
+  }
+}
+
+.buttons-container-call-manager{
+  position: relative;
+  height: 3rem;
+  margin-top: -2rem;
+  margin-bottom: 1rem;
+}
 
 /*===============================================
 ORGANIZATION PAGE
