--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2046,6 +2046,9 @@ EVENT PAGE
   display: inline;
   vertical-align: top;
   margin-left: 0.5rem;
+  a {
+    vertical-align: top;
+  }
 }
 
 .textContainer-infoTab-event-page{
@@ -2413,4 +2416,30 @@ a.participant-program-card-own {
   margin-top: .5rem;
   margin-bottom: 1rem;
   color:  $grey-4;
+}
+
+
+.partnerName-event-page{
+  text-align: center;
+  font-size: $almostNormalSize;
+  line-height: 1.2rem;
+}
+
+.partnerCard-event-page{
+  width: 11.25rem;
+  padding: 1rem;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.partnerImage-event-page{
+  width: 9.2rem;
+  height: 9.2rem;
+  position: relative;
+  img{
+    max-height: 9.2rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
