--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2037,6 +2037,12 @@ EVENT PAGE
   width: 33%;
   display: inline-block;
   padding: 0.4rem 1rem;
+  @include breakpoint(small down){
+    display: block;
+    width: 100%;
+    border-right: none !important;
+    padding: 0rem;
+  }
 }
 
 .header-container-infoTab-event{
