cross browser compatibility - commented out event card and artists program

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2105,6 +2105,7 @@ EVENT PAGE
 .iconContainer-infoHeader-event-page{
   display: inline-block;
   width: 2rem;
+  margin-top: -0.2rem;
 }
 
 .header-container-infoTab-event{
