--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2148,7 +2148,9 @@ p.info-text-header-infoTab-event{
 }
 
 .textContainer-infoTab-event-page{
-  margin-top: 2rem;
+  @include breakpoint(medium){
+   margin-top: 2rem;
+  }
 }
 
 .baseline-infoTab-event-page{
@@ -2547,13 +2549,6 @@ a.participant-program-card-own {
 EVENT PAGE
 ================================================*/
 
-.text-browser-alert{
-
-}
-
-.text-button-container-browser-alert{
-  /* @extend .pard-grid; */
-}
 
 .browser-alert{
   background-color: rgba(252, 230, 226, 0.9);
@@ -2574,18 +2569,39 @@ EVENT PAGE
 }
 
 .text-event-page-info{
-  display: inline;
-  /* float: right; */
+  @include breakpoint(medium){
+    display: inline;
+/*     float: right; 
+ */  }
 }
 
 .image-evet-page-info{
+  @include breakpoint(medium) {
   display: inline-block;
   float: left;
   width: 50%;
+  } 
+  @include breakpoint(medium down){
+    margin-right: 1rem;
+  }
+  @include breakpoint(small down){
+    width: 100%;
+    position: relative;
+  }
+
 }
 
 .img-event-info-p{
+/*   @include breakpoint(large){
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  } */
+
   border: 1px solid $grey-2;
+  @include breakpoint(small down){
+    @include horizontal-center; 
+    position: relative;
+  }
 }
 
 .colaborators-container-info-event-page{
@@ -2601,7 +2617,12 @@ CROWDFUNDING
 ================================================*/
 
 .crowdfunding-widget-infoTab-event{
-  width: 252px;
-  float: right;
-  margin-left: 1rem;
+  @include breakpoint(medium){
+    width: 252px;
+    float: right;
+    margin-left: 1rem;
+  }
+  @include breakpoint(small down){
+    @include horizontal-center; 
+  }
 }
