event info card visible in welcome page and user page

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -26,6 +26,8 @@ WELCOME PAGE
 .news-date{
   float: right;
   font-size: $almostNormalSize;
+  padding-left: 50%;
+  margin-bottom: 0.4rem;
 }
 
 .info-title-news-welcome, .info-title-news-user{
