--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -775,6 +775,7 @@ a.toEventPageBtn-event-info-card{
   @extend .pard-btn;
   color: white;
   font-size: 1rem;
+  padding: 0.3rem 1.2rem;
 }
 
 /*===============================================
