--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2562,6 +2562,7 @@ EVENT PAGE
 
 .crowdfunding-alert{
   background-color: rgba(255, 255, 5, 0.9);
+  /* background-color: #faffbd; */
   padding: 0.5rem 2rem;
   position: relative;
   z-index: 3;
