--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2563,8 +2563,10 @@ EVENT PAGE
 .crowdfunding-alert{
   background-color: rgba(255, 255, 5, 0.9);
   /* background-color: #faffbd; */
-  padding: 0.5rem 2rem;
-  position: relative;
+  padding: 1rem 2rem;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   z-index: 3;
   @include breakpoint(small down){
     padding: 0.5rem;
