eventManager redesign project

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1564,7 +1564,7 @@ Program Manager Tab
   /* width: 13rem; */
 }
 
-li.artists-selector-container-call-manager{
+.artists-selector-container-call-manager{
   span.select2-container--default .select2-selection--single{
     height: 2.5rem;
     border-radius: 0;
