--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -114,7 +114,7 @@ a.profileCard:hover{
 }
 
 .warning{
-  border:1px solid red;
+  border:1px solid red !important;
 }
 
 .checkBox-warning{
@@ -1386,7 +1386,16 @@ select, textarea, a{
   .m-artistCall{
     font-size: 14px;
     float: right;
-    margin-top: -0.5rem;
+    /* border-top: 1px solid; */
+    /* border-right: 1px solid; */
+    padding: 0 1rem;
+    background: $grey-1;
+  }
+
+  .message-call{
+    height: 1rem;
+    position: relative;
+    margin: 1rem 0 0 0;
   }
   
   .t-artistCall{
