--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -630,6 +630,7 @@ Aside
   display: block;
 }
 
+
 .profile-selected-container{
   /* background: $grey-1; */
   padding: 0.4rem 0.1rem;
@@ -2573,10 +2574,6 @@ a.participant-program-card-own {
 }
 
 
-/*===============================================
-EVENT PAGE
-================================================*/
-
 
 .browser-alert{
   background-color: rgba(252, 230, 226, 0.9);
@@ -2653,6 +2650,34 @@ EVENT PAGE
   padding-top: 2rem;
   display: inline-block;
 }
+
+.content-form-selected{
+  background: $grey-1;
+  font-weight: bold;
+}
+
+.production-btn-event-page{
+  padding: 0.2rem 0.1rem;
+  position: relative;
+  width: 11.5rem;
+  display: inline-block;
+  height: 2.7rem;
+  margin-top: 0.1rem;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  border: 1px solid $grey-2;
+}
+
+.production-btn-event-page:hover{
+  background: $grey-1;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.prodContainer-event-page{
+  margin-bottom: 1rem;
+}
+
 
 
 
