--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -791,6 +791,7 @@ Profile Section
     width: -webkit-calc(100% - 2.8rem);
     width: calc(100% - 2.8rem);
   };
+  display:inline-block;
   line-height: 1.3rem;
   vertical-align: -0.2rem;
   font-size: $almostNormalSize;
@@ -2134,6 +2135,7 @@ EVENT PAGE
   width: 2rem;
   margin-top: .4rem;
   vertical-align: middle;
+  color: $grey-4;
 }
 
 .info-text-header-infoTab-event{
@@ -2699,7 +2701,7 @@ a.participant-program-card-own {
   margin-right: 0.7rem;
   margin-bottom: 0.35rem;
   margin-top: 0.35rem;
-  width: 7.5rem;
+  width: 7.43rem;
   border: 1px solid $grey-2;
   text-align: center;
   /* height: 2rem; */
